--- a/config/.env
+++ b/config/.env
@@ -7,4 +7,6 @@ POSTGRES_PORT=5432
 
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-GROQ_API_KEY=your_groq_api_key_here
+STT_MODEL=whisper-1
+TTS_MODEL=tts-1
+TTS_VOICE=alloy
