--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ psycopg2-binary==2.9.10
 langchain==0.3.27
 langchain-openai==0.3.34
 openai==2.1.0
-langchain-groq==0.3.8
 django-cors-headers==4.3.0
+coverage==7.10.7
