--- a/config/.env
+++ b/config/.env
@@ -1,8 +1,10 @@
 # PostgreSQL Configuration
 POSTGRES_USER=agent_platform_admin
-POSTGRES_PASSWORD=some_secure_password_123 # Change this to a strong password and change it in docker-compose.yml as well
+# Change this to a strong password and change it in docker-compose.yml as well
+POSTGRES_PASSWORD=some_secure_password_123
 POSTGRES_DB=agent_platform
-POSTGRES_HOST=db #localhost for local development, db for docker-compose
+#localhost for local development, db for docker-compose
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
 # OpenAI API Configuration
